2006-12-01  Brian Matherly  <brian@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: comment out lsn_reset - it causes crashes.

2006-12-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py: Show buttons for reorder and add
	parents in case the toolbar is not visible.

2006-12-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Check.py (fix_encoding): Fix mime type string.
	* src/Filters/Rules/_RuleUtils.py (loose_date_cmp): Compare
	textual dates.
	* src/Filters/Rules/_HasEventBase.py (apply): Do not match empty
	places. 
	* src/plugins/Rebuild.py (__init__): Proper progress indication.
	* src/ArgHandler.py (cl_action): Properly call CLI tool.
	* src/plugins/DumpGenderStats.py (__init__): Fix CLI mode.
	* src/PluginUtils/_Tool.py (cli_tool): Fix CLI tools.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/plugins/RebuildRefMap.py: Add new plugin.
	* src/GrampsDb/_GrampsBSDDB.py (reindex_reference_map): Fix reindexing.
	* src/GrampsDb/_GrampsDbBase.py (reindex_reference_map): Add a
	placeholder method for anything other than BSDDB.

2006-11-30  A Costa  <agcosta@gis.net>
	* data/man/gramps.1.in: Typos.

2006-11-30  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Correctly convert
	alt_loc in Place upgrade.

2006-11-30  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Repository/_HasRepo.py: Correct logic.
	* src/Filters/Rules/Makefile.am: Ship new file.
	* src/Filters/Rules/Family/Makefile.am: Ship new file.
	* src/Filters/Rules/Person/Makefile.am: Ship new file.

2006-11-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/*: Add new Rule HasMarkerOf
	* src/FilterEditor/_EditRule.py: Support MarkerType
	* src/Filters/SideBar/_FamilySidebarFilter.py: Add MarkerType
	* src/Filters/SideBar/_PersonSidebarFilter.py: Add MarkerType

2006-11-29  Alex Roitman  <shura@gramps-project.org>