@@ -1,3 +1,6 @@
+2006-12-02  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/Check.py (check_repo_references): Add new check.
+
 2006-12-01  Brian Matherly  <brian@gramps-project.org>
 	* src/GrampsDb/_GrampsBSDDB.py: comment out lsn_reset - it causes crashes.
 
